crates/rustynes-test-harness/tests/snapshots/external_real_games__external_namco163_mappy_kids.snap
---
source: crates/rustynes-test-harness/tests/external_real_games.rs
expression: text
---
rom=mapper-019-Namco163/Mappy Kids (Japan) (En) (1.0).nes
rom_sha256=341cc6ab7d744611d9ed26b16dd3348992b735abc0e8198362daed133bb1f84c
frames=600
fb_bytes=245760
cycles=17838522
audio_samples=439524
audio_fnv1a64=dda9e74ae2696052
checkpoint f600 fb_fnv1a64=b915540cba904f48
