crates/rustynes-test-harness/tests/snapshots/external_real_games__external_nrom_balloon_fight.snap
---
source: crates/rustynes-test-harness/tests/external_real_games.rs
assertion_line: 126
expression: text
---
rom=mapper-000-NROM/Balloon Fight.nes
rom_sha256=aee1714a831a79ca539f9f8cfeb283ce78ac1f1461df58524e34f0877dac0aa3
frames=600
fb_bytes=245760
cycles=17838523
audio_samples=439524
audio_fnv1a64=dda9e74ae2696052
checkpoint f600 fb_fnv1a64=663cecc527dbafe3
