crates/rustynes-test-harness/tests/snapshots/external_real_games__external_nrom_donkey_kong.snap
---
source: crates/rustynes-test-harness/tests/external_real_games.rs
expression: text
---
rom=mapper-000-NROM/Donkey Kong.nes
rom_sha256=c9a2534daf88224f084969d771aafeafb291601a3c1b6757907e16c937ec121c
frames=600
fb_bytes=245760
cycles=17838521
audio_samples=439524
audio_fnv1a64=b0c3b58b35a7982a
checkpoint f600 fb_fnv1a64=6c8c3618c64bf077
