crates/rustynes-test-harness/tests/snapshots/external_real_games__external_nrom_excitebike.snap
---
source: crates/rustynes-test-harness/tests/external_real_games.rs
expression: text
---
rom=mapper-000-NROM/Excitebike.nes
rom_sha256=c476ffa6bfae40bdc2509dd200e8c02312c7717cc485f636494716365067e112
frames=600
fb_bytes=245760
cycles=17838535
audio_samples=439524
audio_fnv1a64=3d22bccdd56f84ec
checkpoint f120 fb_fnv1a64=f98ede8ee8ef7f90
checkpoint f240 fb_fnv1a64=1c3961921adafc9d
checkpoint f600 fb_fnv1a64=985382d1e62cb11f
