crates/rustynes-test-harness/tests/snapshots/external_real_games__external_uxrom_castlevania.snap
---
source: crates/rustynes-test-harness/tests/external_real_games.rs
expression: text
---
rom=mapper-002-UxROM/Castlevania.nes
rom_sha256=3cfa03a397afefa9f6d66f41812a9984ec5a7413f6829864ff3dd8aec5642d08
frames=600
fb_bytes=245760
cycles=17838526
audio_samples=439524
audio_fnv1a64=dda9e74ae2696052
checkpoint f600 fb_fnv1a64=d399a7c491bdce3a
